--- a/Ui/Ui/views/ListOfCluster.xaml
+++ b/Ui/Ui/views/ListOfCluster.xaml
@@ -32,7 +32,7 @@
       EditingElementStyle="{StaticResource MaterialDesignDataGridTextColumnPopupEditingStyle}" />
                 <!-- set a max length to get an indicator in the editor -->
                 <materialDesign:DataGridTextColumn
-      Binding="{Binding Path=RealPlace.loc.toString}" 
+      Binding="{Binding Path=RealPlace.loc.display_name}" 
                                 Header="Location"
       MaxLength="255"
       EditingElementStyle="{StaticResource MaterialDesignDataGridTextColumnPopupEditingStyle}" />
