--- a/Ui/Ui/views/ClusterTab.xaml
+++ b/Ui/Ui/views/ClusterTab.xaml
@@ -51,7 +51,7 @@
       Margin="8 24 8 4">
                                 <TextBlock
         Style="{StaticResource MaterialDesignSubtitle1TextBlock}"
-        Margin="0" Text="{Binding RealPlace.loc.toString}">
+        Margin="0" Text="{Binding RealPlace.loc.display_name}">
                                 </TextBlock>
                                 <TextBlock
         Style="{StaticResource MaterialDesignSubtitle1TextBlock}"
