--- a/Ui/Ui/views/listOfReports.xaml
+++ b/Ui/Ui/views/listOfReports.xaml
@@ -8,28 +8,46 @@
              mc:Ignorable="d" 
              d:DesignHeight="110" d:DesignWidth="300">
     <Grid>
-        <!--<ListView HorizontalAlignment="Center" 
-              VerticalAlignment="Top" Width="300" Height="110" ItemsSource="{Binding}">
-            <ListView.View>
-                <GridView x:Name="GridView1">
-                    <GridViewColumn DisplayMemberBinding= "{Binding Path=Id}" 
-                                Header="Id" Width="50"/>
-                    <GridViewColumn DisplayMemberBinding= "{Binding Path=dateTime}" 
-                                Header="Time" Width="50"/>
-                    <GridViewColumn DisplayMemberBinding= "{Binding Path=p1}" 
-                                Header="Location" Width="50"/>
-                    <GridViewColumn DisplayMemberBinding= "{Binding Path=Drive}" 
-                                Header="Owner" Width="50"/>
-                    <GridViewColumn DisplayMemberBinding= "{Binding Path=pic}" 
-                                Header="Picture" Width="50"/>
-                    --><!--GridViewColumn DisplayMemberBinding= "{Binding Path=Drive}" 
-                                Header="closer" Width="50"/--><!--
-                </GridView>
-            </ListView.View>
-        </ListView>-->
-        <DataGrid
+        <ItemsControl
+  ItemsSource="{Binding list}"
+  Grid.IsSharedSizeScope="True">
+            <ItemsControl.ItemTemplate>
+                <DataTemplate
+      >
+                    <Border
+        x:Name="Border"
+        Padding="8"
+        BorderThickness="0 0 0 1"
+        BorderBrush="{DynamicResource MaterialDesignDivider}">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition
+              SharedSizeGroup="Checkerz" />
+                                <ColumnDefinition />
+                            </Grid.ColumnDefinitions>
+                            <ToggleButton
+            VerticalAlignment="Center"
+            IsChecked="True"
+            Style="{StaticResource MaterialDesignActionLightToggleButton}"
+            Content="{Binding Path=Id}" />
+                            <StackPanel
+            Margin="8 0 0 0"
+            Grid.Column="1">
+                                <TextBlock
+              FontWeight="Bold"
+              Text="{Binding Path=Id}" />
+                                <TextBlock
+              Text="{Binding Path=Id}" />
+                            </StackPanel>
+                        </Grid>
+                    </Border>
+                    
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
+        <!--<DataGrid
   Margin="0 8 0 0"
-  ItemsSource="{Binding}"
+  ItemsSource="{Binding list}"
   CanUserSortColumns="True"
   CanUserAddRows="False"
   AutoGenerateColumns="False"
@@ -43,12 +61,12 @@
       Binding="{Binding Path=Id}"
       
       EditingElementStyle="{StaticResource MaterialDesignDataGridTextColumnEditingStyle}" />
-                <!-- if you want to use the pop up style (MaterialDesignDataGridTextColumnPopupEditingStyle), you must use MaterialDataGridTextColumn -->
+                --><!-- if you want to use the pop up style (MaterialDesignDataGridTextColumnPopupEditingStyle), you must use MaterialDataGridTextColumn --><!--
                 <materialDesign:DataGridTextColumn
       Binding="{Binding Path=dateTime}" 
                                 Header="Time"
       EditingElementStyle="{StaticResource MaterialDesignDataGridTextColumnPopupEditingStyle}" />
-                <!-- set a max length to get an indicator in the editor -->
+                --><!-- set a max length to get an indicator in the editor --><!--
                 <materialDesign:DataGridTextColumn
       Binding="{Binding Path=loc.display_name}" 
                                 Header="Location"
@@ -69,9 +87,9 @@
       EditingElementStyle="{StaticResource MaterialDesignDataGridTextColumnPopupEditingStyle}">
 
                 </materialDesign:DataGridTextColumn>
-                <!-- use custom combo box column to get better combos. Use ItemsSourceBinding as your binding template to be applied to each combo -->
+                --><!-- use custom combo box column to get better combos. Use ItemsSourceBinding as your binding template to be applied to each combo --><!--
                
             </DataGrid.Columns>
-        </DataGrid>
+        </DataGrid>-->
     </Grid>
 </UserControl>
