--- a/Ui/Ui/views/ReportTab.xaml
+++ b/Ui/Ui/views/ReportTab.xaml
@@ -1,4 +1,6 @@
-﻿<UserControl x:Class="Ui.ReportTab"
+﻿<UserControl
+    x:Name="uc"
+    x:Class="Ui.ReportTab"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,7 +10,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <ListBox Name="lbTodoList" ItemsSource="{Binding}">
+        <ListBox Name="lbTodoList" ItemsSource="{Binding corentCluster}">
             <ListBox.ItemsPanel>
                 <ItemsPanelTemplate>
                     <WrapPanel Orientation="Horizontal"/>
@@ -50,7 +52,7 @@
         Height="Auto" />
                             </Grid.RowDefinitions>
                             <Image
-      Source="{Binding RealPlace.picture}"
+      Source="{Binding picture}"
       Height="140"
       Stretch="UniformToFill" />
                             <ToggleButton
@@ -85,7 +87,7 @@
                                 <Button
         Style="{StaticResource MaterialDesignFlatButton}"
         HorizontalAlignment="Center"
-        Margin="8 4 8 8" Click="Button_Click" DataContext="{Binding RealPlace.picture}">
+        Margin="8 4 8 8" Command="{Binding openImg, ElementName=uc}" CommandParameter="{Binding picture}">
                                     See full Image
                                 </Button>
                             </StackPanel>
