--- a/Ui/Ui/Frame.xaml
+++ b/Ui/Ui/Frame.xaml
@@ -1,302 +1,131 @@
-﻿<Window x:Class="Ui.Frame"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        xmlns:local="clr-namespace:Ui"
-        mc:Ignorable="d"
-        Title="Frame" Height="450" Width="800">
+﻿<Window x:Class="Ui.Frame" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:local="clr-namespace:Ui" mc:Ignorable="d" Title="Frame" Height="450" Width="800">
     <Window.Resources>
         <ResourceDictionary>
-            
             <ResourceDictionary.MergedDictionaries>
-                
-
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Button.xaml" />
-
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.PopupBox.xaml" />
-
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.TextBlock.xaml" />
-
                 <!-- throw in some extra colour for our floating action button -->
-
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/MaterialDesignColor.Green.Named.Primary.xaml" />
-
             </ResourceDictionary.MergedDictionaries>
             <local:EnumToBoolConverter x:Key="EnumToBoolConverter" />
         </ResourceDictionary>
-        
     </Window.Resources>
     <materialDesign:DrawerHost BorderBrush="{DynamicResource MaterialDesignDivider}">
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
-            <materialDesign:ColorZone Grid.Row="0"
-            DockPanel.Dock="Top"
-  Mode="Accent"
-  Padding="16">
+            <materialDesign:ColorZone Grid.Row="0" DockPanel.Dock="Top" Mode="Accent" Padding="16">
                 <DockPanel>
-                    <materialDesign:PopupBox DockPanel.Dock="Right"
- 
-  PlacementMode="BottomAndAlignRightEdges"
-  ToolTipService.Placement="Right"
-  ToolTip="PopupBox, Style MaterialDesignMultiFloatingActionPopupBox"
- >
+                    <materialDesign:PopupBox DockPanel.Dock="Right" PlacementMode="BottomAndAlignRightEdges" ToolTipService.Placement="Right" ToolTip="PopupBox, Style MaterialDesignMultiFloatingActionPopupBox">
                         <StackPanel>
-                            <materialDesign:Chip Margin="4"
-  Content="Analize Report"
-  IconBackground="{DynamicResource PrimaryHueDarkBrush}"
-  IconForeground="{DynamicResource PrimaryHueDarkForegroundBrush}"
-                                              Command="{Binding Analitics}">
+                            <materialDesign:Chip Margin="4" Content="Analize Report" IconBackground="{DynamicResource PrimaryHueDarkBrush}" IconForeground="{DynamicResource PrimaryHueDarkForegroundBrush}" Command="{Binding Analitics}">
                                 <materialDesign:Chip.Icon>
-                                    <materialDesign:PackIcon
-      Kind="Twitter"></materialDesign:PackIcon>
+                                    <materialDesign:PackIcon Kind="Twitter"></materialDesign:PackIcon>
                                 </materialDesign:Chip.Icon>
                             </materialDesign:Chip>
-                            <materialDesign:Chip Margin="4"
-  Content="ViewReports"
-  IconBackground="{DynamicResource PrimaryHueDarkBrush}"
-  IconForeground="{DynamicResource PrimaryHueDarkForegroundBrush}"
-                                                 Command="{Binding Back}">
+                            <materialDesign:Chip Margin="4" Content="ViewReports" IconBackground="{DynamicResource PrimaryHueDarkBrush}" IconForeground="{DynamicResource PrimaryHueDarkForegroundBrush}" Command="{Binding AllReport}">
                                 <materialDesign:Chip.Icon>
-                                    <materialDesign:PackIcon
-      Kind="Twitter"></materialDesign:PackIcon>
+                                    <materialDesign:PackIcon Kind="Twitter"></materialDesign:PackIcon>
                                 </materialDesign:Chip.Icon>
                             </materialDesign:Chip>
-                            <materialDesign:Chip Margin="4" Name="xyz"
-  Content="New Report"
-  IconBackground="{DynamicResource PrimaryHueDarkBrush}"
-  IconForeground="{DynamicResource PrimaryHueDarkForegroundBrush}"
-                                                 Command="{Binding NewReport}">
+                            <materialDesign:Chip Margin="4" Name="xyz" Content="New Report" IconBackground="{DynamicResource PrimaryHueDarkBrush}" IconForeground="{DynamicResource PrimaryHueDarkForegroundBrush}" Command="{Binding NewReport}">
                                 <materialDesign:Chip.Icon>
-                                    <materialDesign:PackIcon
-      Kind="Twitter"></materialDesign:PackIcon>
+                                    <materialDesign:PackIcon Kind="Twitter"></materialDesign:PackIcon>
                                 </materialDesign:Chip.Icon>
                             </materialDesign:Chip>
-                            <materialDesign:Chip Margin="4"
-  Content="Refresh Data"
-  IconBackground="{DynamicResource PrimaryHueDarkBrush}"
-  IconForeground="{DynamicResource PrimaryHueDarkForegroundBrush}"
-                                                 Command="{Binding Refresh}">
+                            <materialDesign:Chip Margin="4" Content="Refresh Data" IconBackground="{DynamicResource PrimaryHueDarkBrush}" IconForeground="{DynamicResource PrimaryHueDarkForegroundBrush}" Command="{Binding Refresh}">
                                 <materialDesign:Chip.Icon>
-                                    <materialDesign:PackIcon
-      Kind="Twitter"></materialDesign:PackIcon>
+                                    <materialDesign:PackIcon Kind="Twitter"></materialDesign:PackIcon>
                                 </materialDesign:Chip.Icon>
                             </materialDesign:Chip>
                         </StackPanel>
                     </materialDesign:PopupBox>
-                    
-                    <StackPanel
-    Orientation="Horizontal">
-
-                    <ToggleButton
-        Command="{x:Static materialDesign:DrawerHost.OpenDrawerCommand}"
-        CommandParameter="{x:Static Dock.Left}"
-      Style="{DynamicResource MaterialDesignHamburgerToggleButton}" />
-                    <TextBlock
-      VerticalAlignment="Center"
-      Margin="16 0 0 0">
+                    <StackPanel Orientation="Horizontal">
+                        <ToggleButton Command="{x:Static materialDesign:DrawerHost.OpenDrawerCommand}" CommandParameter="{x:Static Dock.Left}" Style="{DynamicResource MaterialDesignHamburgerToggleButton}" />
+                        <TextBlock VerticalAlignment="Center" Margin="16 0 0 0">
     Deshboard
-                    </TextBlock>
-
-                </StackPanel>
-                
+                        </TextBlock>
+                    </StackPanel>
                 </DockPanel>
-
             </materialDesign:ColorZone>
-        <Grid Grid.Row="1" DockPanel.Dock="Top">
-
+            <Grid Grid.Row="1" DockPanel.Dock="Top">
                 <Grid.ColumnDefinitions>
-
-                    <ColumnDefinition/>
-
-                    <ColumnDefinition/>
-
+                    <ColumnDefinition />
+                    <ColumnDefinition />
                 </Grid.ColumnDefinitions>
-
                 <Grid.RowDefinitions>
-
-                    <RowDefinition/>
-
-
+                    <RowDefinition />
                 </Grid.RowDefinitions>
-
-
-                <GroupBox x:Name="LeftBox" Content="{Binding leftTab}" Grid.Column="0" Grid.Row="0"
-  Header="{Binding leftTitle}"
-  Margin="16">
+                <GroupBox x:Name="LeftBox" Content="{Binding leftTab}" Grid.Column="0" Grid.Row="0" Header="{Binding leftTitle}" Margin="16">
                     <!--<local:listOfReports />-->
                 </GroupBox>
-                <GroupBox x:Name="RightBox" Content="{Binding rightTab}" Grid.Column="1" Grid.Row="0"
-  Header="{Binding rightTitle}"
-  Margin="16">
+                <GroupBox x:Name="RightBox" Content="{Binding rightTab}" Grid.Column="1" Grid.Row="0" Header="{Binding rightTitle}" Margin="16">
                     <!--<local:ReportsInMap />-->
                 </GroupBox>
             </Grid>
-            <materialDesign:ColorZone Grid.Row="2"
-  Mode="PrimaryDark"
-  CornerRadius="3"
-  materialDesign:ShadowAssist.ShadowDepth="Depth3"
-  Margin="2"
-                    >
+            <materialDesign:ColorZone Grid.Row="2" Mode="PrimaryDark" CornerRadius="3" materialDesign:ShadowAssist.ShadowDepth="Depth3" Margin="2">
                 <StackPanel Orientation="Horizontal">
                     <Grid>
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition/>
-                            <ColumnDefinition Width="*" MinWidth="300"/>
-                            <ColumnDefinition/>
-                            <ColumnDefinition/>
+                            <ColumnDefinition />
+                            <ColumnDefinition Width="*" MinWidth="300" />
+                            <ColumnDefinition />
+                            <ColumnDefinition />
                         </Grid.ColumnDefinitions>
-                        <Button
-        Command="{x:Static materialDesign:DrawerHost.OpenDrawerCommand}"
-        CommandParameter="{x:Static Dock.Bottom}"
-        
-        Margin="4">
-                            <materialDesign:PackIcon
-          Kind="ArrowDown" />
+                        <Button Command="{x:Static materialDesign:DrawerHost.OpenDrawerCommand}" CommandParameter="{x:Static Dock.Bottom}" Margin="4">
+                            <materialDesign:PackIcon Kind="ArrowDown" />
                         </Button>
-                        <TextBlock 
-                            Grid.Column="1"
-                            Name="console"
-      VerticalAlignment="Center"
-      Margin="16,8,0,8" Height="16" Text="{Binding TitleConsole}">
-                        </TextBlock>
-                        <StackPanel Grid.Column="2"
-  Orientation="Horizontal" 
-  >
-
-                            <RadioButton
-    Style="{StaticResource MaterialDesignTabRadioButton}"
-    IsChecked="{Binding Path=Options, Converter={
-    StaticResource EnumToBoolConverter}, ConverterParameter=Map}"
-    Name="switch1"
-    Content="Map"
-                               
-                                />
-                            <RadioButton
-    Style="{StaticResource MaterialDesignTabRadioButton}"
-    Name="switch2"
-    Content="Tab"
-                                IsChecked="{Binding Path=Options, Converter={
-    StaticResource EnumToBoolConverter}, ConverterParameter=Tab}"
-
-                               
-                                />
-                            <RadioButton 
-                                Name="switch3"
-     Content="List"                           
-    Style="{StaticResource MaterialDesignTabRadioButton}" 
-    IsChecked="{Binding Path=Options, Converter={
-    StaticResource EnumToBoolConverter}, ConverterParameter=List}"
-                              />
-                            <RadioButton 
-                                Name="switch4"
-    Content="Combina"                            
-    Style="{StaticResource MaterialDesignTabRadioButton}" 
-    IsChecked="{Binding Path=Options, Converter={
-    StaticResource EnumToBoolConverter}, ConverterParameter=Combina}"
-                              />
-
-
+                        <TextBlock Grid.Column="1" Name="console" VerticalAlignment="Center" Margin="16,8,0,8" Height="16" Text="{Binding TitleConsole}"></TextBlock>
+                        <StackPanel Grid.Column="2" Orientation="Horizontal">
+                            <RadioButton Style="{StaticResource MaterialDesignTabRadioButton}" IsChecked="{Binding Path=Options, Converter={     StaticResource EnumToBoolConverter}, ConverterParameter=Map}" Name="switch1" Content="Map" />
+                            <RadioButton Style="{StaticResource MaterialDesignTabRadioButton}" Name="switch2" Content="Tab" IsChecked="{Binding Path=Options, Converter={     StaticResource EnumToBoolConverter}, ConverterParameter=Tab}" />
+                            <RadioButton Name="switch3" Content="List" Style="{StaticResource MaterialDesignTabRadioButton}" IsChecked="{Binding Path=Options, Converter={     StaticResource EnumToBoolConverter}, ConverterParameter=List}" />
+                            <RadioButton Name="switch4" Content="Combina" Style="{StaticResource MaterialDesignTabRadioButton}" IsChecked="{Binding Path=Options, Converter={     StaticResource EnumToBoolConverter}, ConverterParameter=Combina}" />
                         </StackPanel>
-
                     </Grid>
                 </StackPanel>
             </materialDesign:ColorZone>
         </Grid>
         <materialDesign:DrawerHost.LeftDrawerContent>
-            <StackPanel
-      Margin="16">
-                <TextBlock
-        Margin="4"
-        HorizontalAlignment="Center">
+            <StackPanel Margin="16">
+                <TextBlock Margin="4" HorizontalAlignment="Center">
             Functions
                 </TextBlock>
-                <Button
-        Command="{x:Static materialDesign:DrawerHost.CloseDrawerCommand}"
-        CommandParameter="{x:Static Dock.Left}"
-        Margin="4"
-        HorizontalAlignment="Center"
-        Style="{DynamicResource MaterialDesignFlatButton}"
-                    Click="Button_Click">
+                <Button Command="{x:Static materialDesign:DrawerHost.CloseDrawerCommand}" CommandParameter="{x:Static Dock.Left}" Margin="4" HorizontalAlignment="Center" Style="{DynamicResource MaterialDesignFlatButton}" Click="Button_Click">
                     Cluster List
                 </Button>
-                <Button
-                    
-        Command="{x:Static materialDesign:DrawerHost.CloseDrawerCommand}"
-        CommandParameter="{x:Static Dock.Left}"
-        Margin="4"
-        HorizontalAlignment="Center"
-        Style="{DynamicResource MaterialDesignFlatButton}" Click="Button_Click_1">
+                <Button Command="{x:Static materialDesign:DrawerHost.CloseDrawerCommand}" CommandParameter="{x:Static Dock.Left}" Margin="4" HorizontalAlignment="Center" Style="{DynamicResource MaterialDesignFlatButton}" Click="Button_Click_1">
                     Reports List
                 </Button>
-                <Button
-        Command="{x:Static materialDesign:DrawerHost.CloseDrawerCommand}"
-        CommandParameter="{x:Static Dock.Left}"
-        Margin="4"
-        HorizontalAlignment="Center"
-        Style="{DynamicResource MaterialDesignFlatButton}" Click="Button_Click_2">
+                <Button Command="{x:Static materialDesign:DrawerHost.CloseDrawerCommand}" CommandParameter="{x:Static Dock.Left}" Margin="4" HorizontalAlignment="Center" Style="{DynamicResource MaterialDesignFlatButton}" Click="Button_Click_2">
                     New Report
                 </Button>
-                <Button
-        Command="{x:Static materialDesign:DrawerHost.CloseDrawerCommand}"
-        CommandParameter="{x:Static Dock.Left}"
-        Margin="4"
-        HorizontalAlignment="Center"
-        Style="{DynamicResource MaterialDesignFlatButton}" Click="Button_Click_3">
+                <Button Command="{x:Static materialDesign:DrawerHost.CloseDrawerCommand}" CommandParameter="{x:Static Dock.Left}" Margin="4" HorizontalAlignment="Center" Style="{DynamicResource MaterialDesignFlatButton}" Click="Button_Click_3">
                     Analitics
                 </Button>
-                <Button
-        Command="{x:Static materialDesign:DrawerHost.CloseDrawerCommand}"
-        CommandParameter="{x:Static Dock.Left}"
-        Margin="4"
-        HorizontalAlignment="Center"
-        Style="{DynamicResource MaterialDesignFlatButton}">
+                <Button Command="{x:Static materialDesign:DrawerHost.CloseDrawerCommand}" CommandParameter="{x:Static Dock.Left}" Margin="4" HorizontalAlignment="Center" Style="{DynamicResource MaterialDesignFlatButton}">
                     Settings
                 </Button>
-                <Button
-        Command="{x:Static materialDesign:DrawerHost.CloseDrawerCommand}"
-        CommandParameter="{x:Static Dock.Left}"
-        Margin="4"
-        HorizontalAlignment="Center"
-        Style="{DynamicResource MaterialDesignFlatButton}">
+                <Button Command="{x:Static materialDesign:DrawerHost.CloseDrawerCommand}" CommandParameter="{x:Static Dock.Left}" Margin="4" HorizontalAlignment="Center" Style="{DynamicResource MaterialDesignFlatButton}">
                     Report about Bugs
                 </Button>
-                <Button
-        Command="{x:Static materialDesign:DrawerHost.CloseDrawerCommand}"
-        CommandParameter="{x:Static Dock.Left}"
-        Margin="4"
-        HorizontalAlignment="Center"
-        Style="{DynamicResource MaterialDesignFlatButton}">
+                <Button Command="{x:Static materialDesign:DrawerHost.CloseDrawerCommand}" CommandParameter="{x:Static Dock.Left}" Margin="4" HorizontalAlignment="Center" Style="{DynamicResource MaterialDesignFlatButton}">
                     Save all Changes
                 </Button>
             </StackPanel>
         </materialDesign:DrawerHost.LeftDrawerContent>
         <materialDesign:DrawerHost.BottomDrawerContent>
-            <StackPanel
-      
-      HorizontalAlignment="Center"
-      Orientation="Vertical">
-                <Button
-        Command="{x:Static materialDesign:DrawerHost.CloseDrawerCommand}"
-        CommandParameter="{x:Static Dock.Bottom}"
-        Style="{DynamicResource MaterialDesignFlatButton}"
-        Margin="4"
-        VerticalAlignment="Center">
+            <StackPanel HorizontalAlignment="Center" Orientation="Vertical">
+                <Button Command="{x:Static materialDesign:DrawerHost.CloseDrawerCommand}" CommandParameter="{x:Static Dock.Bottom}" Style="{DynamicResource MaterialDesignFlatButton}" Margin="4" VerticalAlignment="Center">
                     Hide
                 </Button>
                 <ScrollViewer MaxHeight="400">
-                <TextBlock
-        Margin="4"
-        VerticalAlignment="Center" Name="fullLog" Text="{Binding logConsole}">
-                
-                </TextBlock>
+                    <TextBlock Margin="4" VerticalAlignment="Center" Name="fullLog" Text="{Binding logConsole}"></TextBlock>
                 </ScrollViewer>
-
             </StackPanel>
         </materialDesign:DrawerHost.BottomDrawerContent>
     </materialDesign:DrawerHost>
