--- a/Ui/Ui/views/ReportForm.xaml
+++ b/Ui/Ui/views/ReportForm.xaml
@@ -1,66 +1,25 @@
-﻿<UserControl x:Class="Ui.ReportForm"
-
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-
-             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-
-             xmlns:local="clr-namespace:Ui"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-
+﻿<UserControl x:Class="Ui.ReportForm" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:local="clr-namespace:Ui" mc:Ignorable="d" d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <StackPanel>
-        <TextBox
-            Text="{Binding val, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-            x:Name="NameTextBox"
-            materialDesign:HintAssist.Hint="Location auto complit" Margin="0,18,0,0" VerticalAlignment="Top" Grid.RowSpan="2"
-            >
-        </TextBox>
-        <ListBox Grid.Row="1" ItemsSource="{Binding Suggests}" SelectedIndex="{Binding indexSelect}">
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="{Binding}"></TextBlock>
-                    </StackPanel>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
-
-        <StackPanel Orientation="Vertical">
-            <DatePicker materialDesign:HintAssist.Hint="Pick Date"
-                        SelectedDate="{Binding date}"
-                Style="{StaticResource MaterialDesignFloatingHintDatePicker}" />
-                <TextBox Grid.Row="3" Text="{Binding time}"
-      materialDesign:HintAssist.Hint="12:20:37"
-       />
+            <TextBox Text="{Binding val, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" x:Name="NameTextBox" materialDesign:HintAssist.Hint="Location auto complit" Margin="0,18,0,0" VerticalAlignment="Top" Grid.RowSpan="2"></TextBox>
+            <ListBox Grid.Row="1" ItemsSource="{Binding Suggests}" SelectedIndex="{Binding indexSelect}">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="{Binding}"></TextBlock>
+                        </StackPanel>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+            <StackPanel Orientation="Vertical">
+                <DatePicker materialDesign:HintAssist.Hint="Pick Date" SelectedDate="{Binding date}" Style="{StaticResource MaterialDesignFloatingHintDatePicker}" />
+                <TextBox Grid.Row="3" Text="{Binding time}" materialDesign:HintAssist.Hint="12:20:37" />
             </StackPanel>
-            <TextBox Grid.Row="3"
-      materialDesign:HintAssist.Hint="Your Mail"
-       />
-            <ToggleButton Grid.Row="2" IsChecked="{Binding hasFile}" Style="{StaticResource MaterialDesignFlatToggleButton}"
-      ToolTip="add file" Command="{Binding addpic}" Height="30" Width="30">
-            <materialDesign:PackIcon
-        Kind="Paperclip"
-        Height="21"
-        Width="21" />
-        </ToggleButton>
-
-
-
-
-        
-
-        <Button Grid.Row="4" Style="{StaticResource MaterialDesignFloatingActionButton}"
-          materialDesign:ButtonProgressAssist.IsIndicatorVisible="True"
-          materialDesign:ButtonProgressAssist.Value="-1"
-          materialDesign:ButtonProgressAssist.IsIndeterminate="True"
-          Content="{materialDesign:PackIcon DotsHorizontal}" Command="{Binding send}"  />
+            <TextBox Grid.Row="3" materialDesign:HintAssist.Hint="Your Mail" />
+            <ToggleButton Grid.Row="2" IsChecked="{Binding hasFile}" Style="{StaticResource MaterialDesignFlatToggleButton}" ToolTip="add file" Command="{Binding addpic}" Height="30" Width="30">
+                <materialDesign:PackIcon Kind="Paperclip" Height="21" Width="21" />
+            </ToggleButton>
+            <Button Grid.Row="4" Style="{StaticResource MaterialDesignFloatingActionButton}" materialDesign:ButtonProgressAssist.IsIndicatorVisible="True" materialDesign:ButtonProgressAssist.Value="-1" materialDesign:ButtonProgressAssist.IsIndeterminate="True" Content="{materialDesign:PackIcon DotsHorizontal}" Command="{Binding send}" />
         </StackPanel>
     </Grid>
 </UserControl>
