--- a/Ui/Ui/views/ReportTab.xaml
+++ b/Ui/Ui/views/ReportTab.xaml
@@ -1,77 +1,32 @@
-﻿<UserControl
-    x:Name="uc"
-    x:Class="Ui.ReportTab"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             xmlns:local="clr-namespace:Ui"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+﻿<UserControl x:Name="uc" x:Class="Ui.ReportTab" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:local="clr-namespace:Ui" mc:Ignorable="d" d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <ListBox Name="lbTodoList" ItemsSource="{Binding corentCluster}">
             <ListBox.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <WrapPanel Orientation="Horizontal"/>
+                    <WrapPanel Orientation="Horizontal" />
                 </ItemsPanelTemplate>
             </ListBox.ItemsPanel>
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <materialDesign:Card
-  Width="220">
+                    <materialDesign:Card Width="220">
                         <Grid>
                             <Grid.RowDefinitions>
-                                <RowDefinition
-        Height="140" />
-                                <RowDefinition
-        Height="*" />
-                                <RowDefinition
-        Height="Auto" />
-                                <RowDefinition
-        Height="Auto" />
-                                <RowDefinition
-        Height="Auto" />
-                                <RowDefinition
-        Height="Auto" />
+                                <RowDefinition Height="140" />
+                                <RowDefinition Height="*" />
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
                             </Grid.RowDefinitions>
-                            <Image
-      Source="{Binding picture}"
-      Height="140"
-      Stretch="UniformToFill" />
-                            <ToggleButton
-                                Grid.Row="0"
-                                Name ="mybtn"
-                                HorizontalAlignment="Right"
-                                VerticalAlignment="Bottom"
-                    Margin="0 0 16 -20"
-            IsChecked="{Binding Path=IsAccurate}"
-            Style="{StaticResource MaterialDesignActionLightToggleButton}"
-            Content="{Binding Path=Id}" />
-                            <StackPanel
-      Grid.Row="1"
-      Margin="8 24 8 4">
-                                <TextBlock
-        Style="{StaticResource MaterialDesignSubtitle1TextBlock}"
-        Margin="0" Text="{Binding loc.display_name}">
-      
-                                </TextBlock>
-                                <TextBlock
-        Style="{StaticResource MaterialDesignSubtitle1TextBlock}"
-        Margin="0" Text="{Binding dateTime}">
-
-                                </TextBlock>
-                               
+                            <Image Source="{Binding picture}" Height="140" Stretch="UniformToFill" />
+                            <ToggleButton Grid.Row="0" Name="mybtn" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0 0 16 -20" IsChecked="{Binding Path=IsAccurate}" Style="{StaticResource MaterialDesignActionLightToggleButton}" Content="{Binding Path=Id}" />
+                            <StackPanel Grid.Row="1" Margin="8 24 8 4">
+                                <TextBlock Style="{StaticResource MaterialDesignSubtitle1TextBlock}" Margin="0" Text="{Binding loc.display_name}"></TextBlock>
+                                <TextBlock Style="{StaticResource MaterialDesignSubtitle1TextBlock}" Margin="0" Text="{Binding dateTime}"></TextBlock>
                             </StackPanel>
-                            <Separator
-      Grid.Row="2"
-      Style="{StaticResource MaterialDesignDarkSeparator}"
-      Margin="8 0 8 0" />
+                            <Separator Grid.Row="2" Style="{StaticResource MaterialDesignDarkSeparator}" Margin="8 0 8 0" />
                             <StackPanel Grid.Row="5">
-                                <Button
-        Style="{StaticResource MaterialDesignFlatButton}"
-        HorizontalAlignment="Center"
-        Margin="8 4 8 8" Command="{Binding DataContext.openImg, RelativeSource={RelativeSource AncestorType=ListBox}}" CommandParameter="{Binding picture}">
+                                <Button Style="{StaticResource MaterialDesignFlatButton}" HorizontalAlignment="Center" Margin="8 4 8 8" Command="{Binding DataContext.openImg, RelativeSource={RelativeSource AncestorType=ListBox}}" CommandParameter="{Binding picture}">
                                     See full Image
                                 </Button>
                             </StackPanel>
@@ -80,6 +35,5 @@
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
-        
     </Grid>
 </UserControl>
